src/objects/Quote__c.object
<CustomObject>
    <fields>
        <fullName>New_Seasonal_Rate_Quote__c</fullName>
        <formula>Properties_Lookup__r.New_Seasonal_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Seasonal Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Contract_Markup_Increase__c</fullName>
        <description>The amount the user would like to increase the non-contract markup.</description>
        <inlineHelpText>Enter the amount to increase non-contract markup.</inlineHelpText>
        <label>Non-Contract Markup Increase</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Refundable_Fee_Quote__c</fullName>
        <formula>Properties_Lookup__r.Non_Refundable_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non-Refundable Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Number_Of_Pets_New__c</fullName>
        <label>Number_Of_Pets</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Adults_New__c</fullName>
        <label>Number_of_Adults</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Adults__c</fullName>
        <formula>Service_Request__r.Opportunity__r.Number_of_Adults__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Adults</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Children_New__c</fullName>
        <label>Number_of_Children</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Children__c</fullName>
        <formula>Service_Request__r.Opportunity__r.Number_of_Children__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Children</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Pets__c</fullName>
        <formula>Service_Request__r.Opportunity__r.Number_of_Pets__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Pets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Extension_Fee_Quote__c</fullName>
        <formula>Extension_Lookup__r.Other_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Extension Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Fee_Description_Quote__c</fullName>
        <formula>Extension_Lookup__r.Other_Fee_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Fee Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Hotel_Fee_Description__c</fullName>
        <formula>Hotel_Room_Lookup__r.Other_Fee_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Hotel Fee Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Hotel_Fee__c</fullName>
        <formula>IF (ISPICKVAL(Hotel_Room_Lookup__r.Other_Fee_Type__c, &quot;One-time&quot;), Hotel_Room_Lookup__r.Other_Fee_Amount__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Hotel Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PTID__c</fullName>
        <formula>Service_Request__r.Opportunity__r.Name</formula>
        <label>PTID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pay_Broker_Fee_ID__c</fullName>
        <formula>Properties_Lookup__r.X18_Char_ID_BrokerFee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pay Broker Fee ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pay_Deposit_ID__c</fullName>
        <formula>Properties_Lookup__r.X18_Char_ID_Deposit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pay Deposit ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pay_Fees_ID__c</fullName>
        <formula>Properties_Lookup__r.X18_Char_ID_Fee__c</formula>
        <label>Pay Fee ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pay_Landlord_Quote__c</fullName>
        <formula>IF( Extension_Lookup__r.Pay_Landlord__c = true, &apos;Yes&apos; , &apos;No&apos;)</formula>
        <label>Pay Landlord</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pay_Rent_ID__c</fullName>
        <formula>Properties_Lookup__r.X18_Char_ID_Rent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pay Rent ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pet_Deposit_Amount__c</fullName>
        <formula>Properties_Lookup__r.Pet_Deposit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pet Deposit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pet_Fee__c</fullName>
        <formula>Properties_Lookup__r.Pet_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pet Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Placement_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Placement Lookup</label>
        <referenceTo>Placement__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Placement_PTID__c</fullName>
        <formula>Placement_Lookup__r.Opportunity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Placement PTID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Placement_Team__c</fullName>
        <formula>Service_Request__r.Opportunity__r.Reports_TeamNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Placement Team</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Policyholder_ID__c</fullName>
        <formula>Service_Request__r.Opportunity__r.X18_Char_ID_PH__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Policyholder ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policyholder_Name__c</fullName>
        <label>Policyholder Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policyholder__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Policyholder</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Quotes (Policyholder)</relationshipLabel>
        <relationshipName>Quotes2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Properties_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Properties Lookup</label>
        <referenceTo>Properties__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_Amenities_Quote__c</fullName>
        <formula>Properties_Lookup__r.Additional_Property_Amenities__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Amenities</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Available_End_Date__c</fullName>
        <formula>Properties_Lookup__r.Property_Availability_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Available End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Property_Type_New__c</fullName>
        <label>Property Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Type__c</fullName>
        <formula>CASE ( Properties_Lookup__r.Type_of_Property__c , &apos;House&apos;, &apos;House&apos; , &apos;Condo&apos; , &apos;Condo&apos; , &apos;Corporate Furnished&apos; , &apos;Corporate Furnished&apos; , &apos;Townhouse&apos; , &apos;Townhouse&apos; , &apos;Apartment&apos; , &apos;Apartment&apos; ,  &apos;Mobile Home&apos; , &apos;Mobile Home&apos;, &apos;Travel Trailer&apos;, &apos;Travel Trailer&apos;, &apos;Furniture Only&apos;, &apos;Furniture Only&apos;, &apos;Other&apos; )</formula>
        <label>Property Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prorate_Adjustment__c</fullName>
        <label>Prorate Adjustment</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prorate_Total__c</fullName>
        <label>Total Prorate</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prorate_Variance__c</fullName>
        <formula>Properties_Lookup__r.Pro_Rate_Variance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prorate Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prorate__c</fullName>
        <label>Prorate</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quote_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check when quote is approved</inlineHelpText>
        <label>Quote Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quote_Document_Recieved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quote Document Recieved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Re_keying_Fee__c</fullName>
        <formula>Properties_Lookup__r.Re_Keying_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Re-keying Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Redecorating_Fee__c</fullName>
        <formula>Properties_Lookup__r.Redecorating_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Redecorating Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rent_Due__c</fullName>
        <formula>Properties_Lookup__r.Rent_Due__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rent Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rent_Frequency_Quote__c</fullName>
        <formula>CASE( Properties_Lookup__r.Rent_Frequency__c, &quot;Monthly&quot; , &quot;Monthly&quot;, &quot;Daily&quot; , &quot;Daily&quot; , &quot;Other&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rent Frequency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rent_Increase_Rate__c</fullName>
        <formula>Properties_Lookup__r.Month_to_Month_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rent Increase Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rent__c</fullName>
        <formula>Properties_Lookup__r.Rent__c</formula>
        <label>Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Return_Deposit_To_New__c</fullName>
        <label>Return Deposit To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Policyholder</fullName>
                </value>
                <value>
                    <fullName>Adjuster</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Return_Deposit_To__c</fullName>
        <formula>CASE( Service_Request__r.Return_Deposit_To_Formula__c, &apos;Adjuster&apos;, &apos;Adjuster&apos;, &apos;Policyholder&apos;, &apos;Policyholder&apos;, &apos;Other&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Return Deposit To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoomCount__c</fullName>
        <description>Total number of rooms entered</description>
        <label>Room Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RoomIndex__c</fullName>
        <description>ordinal room number of the total rooms entered</description>
        <label>Room Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Searches__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Selected Search</label>
        <referenceTo>Searches__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Seasonal_Rate_End_Quote__c</fullName>
        <formula>Properties_Lookup__r.Season_Rate_End__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Seasonal Rate End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Seasonal_Rate_Start_Quote__c</fullName>
        <formula>Properties_Lookup__r.Seasonal_Rate_Start__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Seasonal Rate Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Security_Deposit_Amount__c</fullName>
        <formula>Properties_Lookup__r.Security_Deposit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Security Deposit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Send_Extension_Check_Quote__c</fullName>
        <formula>CASE ( Extension_Lookup__r.Send_Extension_Check__c , &apos;FedEx Morning&apos;, &apos;FedEx Morning&apos;, &apos;FedEx Standard&apos;, &apos;FedEx Standard&apos;, &apos;FedEx Saturday&apos;, &apos;FedEx Saturday&apos;, &apos;FedEx 2-Day&apos;, &apos;FedEx 2-Day&apos;, &apos;US Mail&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Send Extension Check Quote</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Septic_Tank_Pump_Rate__c</fullName>
        <formula>Properties_Lookup__r.Septic_Holding_Tank_Pump_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Septic Tank/Pump Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Request_Record_Type__c</fullName>
        <formula>Service_Request__r.RecordTypeId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Request Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Request</label>
        <referenceTo>ServiceRequest__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Special_Instructions_New__c</fullName>
        <description>Additional information that will appear on the quote.</description>
        <label>Special Instructions</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Special_Instructions__c</fullName>
        <inlineHelpText>Additional information that will appear on the quote.</inlineHelpText>
        <label>Special Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <formula>Properties_Lookup__r.Lease_Start__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Team_Number_Quote__c</fullName>
        <formula>Service_Request__r.Opportunity__r.Reports_TeamNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Temporary_Address_New__c</fullName>
        <label>Temporary Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temporary_Address__c</fullName>
        <formula>Properties_Lookup__r.Address_Line_1__c &amp; &quot; &quot; &amp; Properties_Lookup__r.Address_Line_2__c &amp; BR() &amp; Properties_Lookup__r.City__c &amp; &quot;, &quot; &amp; Properties_Lookup__r.State_ID__c &amp; &quot; &quot; &amp; Properties_Lookup__r.Zip__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Temporary Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Refundable_Deposit__c</fullName>
        <formula>Properties_Lookup__r.Total_Refundable_Deposit_Formula__c</formula>
        <label>Total Refundable Deposit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Refundable_Security_Deposit_Amount__c</fullName>
        <formula>Properties_Lookup__r.Total_Refundable_Deposit_Formula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Refundable Security Deposit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trailer_Mobile_Delivery_Fee__c</fullName>
        <formula>Properties_Lookup__r.Delivery_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trailer-Mobile Delivery Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trailer_Mobile_Dozer_Fee__c</fullName>
        <formula>Properties_Lookup__r.Dozer_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trailer-Mobile Dozer Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trailer_Mobile_Electric_AC_Fee__c</fullName>
        <formula>Properties_Lookup__r.Electric_A_C_Hookup_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trailer-Mobile Electric/AC Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trailer_Mobile_Setup_Fee__c</fullName>
        <formula>Properties_Lookup__r.Set_Up_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trailer-Mobile Setup Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trailer_Mobile_Site_Inspection_Fee__c</fullName>
        <formula>Properties_Lookup__r.Site_Inspection_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trailer-Mobile Site Inspection Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trailer_Mobile_Skirting_Fee__c</fullName>
        <formula>Properties_Lookup__r.Skirting_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trailer-Mobile Skirting Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trailer_Mobile_Temp_Pole__c</fullName>
        <formula>Properties_Lookup__r.Temp_Utility_Pole_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trailer-Mobile Temp Pole</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trailer_Mobile_Winterization_Fee__c</fullName>
        <formula>Properties_Lookup__r.Winterization_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trailer-Mobile Winterization Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X18_Char_ID_HotelRoom__c</fullName>
        <description>Created to convert the 15 character id to 18 characters.</description>
        <label>X18_Char_ID_HotelRoom</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>billing_adjustment_amount_quote__c</fullName>
        <description>The monthly billing adjustment amount.</description>
        <formula>Adjustment_Lookup__r.Billing_Adjustment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The amount the recurring billing should increase or decrease.</inlineHelpText>
        <label>Billing Adjustment Amount Quote</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>hotel_cc_type__c</fullName>
        <formula>CASE( Placement_Lookup__r.Credit_Card_Type__c , &apos;American Express&apos;, &apos;American Express&apos;, &apos;Visa&apos;, &apos;Visa&apos;, &apos;None&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hotel CC Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>housing_adjustment_fee_quote__c</fullName>
        <description>A one time credit as a cost adjustment.</description>
        <formula>Adjustment_Lookup__r.Housing_Adjustment_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>A one time credit as a cost adjustment.</inlineHelpText>
        <label>Housing Adjustment Fee Quote</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>other_fee_quote__c</fullName>
        <description>The other fee description for adjustments.</description>
        <formula>Adjustment_Lookup__r.Other_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The other fee description for adjustments.</inlineHelpText>
        <label>Other Fee Quote</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>prorate_variance_quote__c</fullName>
        <description>The difference between the CRS prorate and landlord prorate.</description>
        <formula>Adjustment_Lookup__r.Prorate_Variance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The difference between the CRS prorate and landlord prorate.</inlineHelpText>
        <label>prorate_variance_quote</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rent_adjustment_effective_date_quote__c</fullName>
        <description>The date the rent change is effective on the cost adjustment.</description>
        <formula>Adjustment_Lookup__r.Rent_Adjustment_Effective_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The date the rent change is effective on the cost adjustment.</inlineHelpText>
        <label>Rent Adjustment Effective Date Quote</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rent_adjustment_quote__c</fullName>
        <description>The amount the rent is increasing or decreasing.</description>
        <formula>Adjustment_Lookup__r.Rent_Adjustment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The amount the rent is increasing or decreasing.</inlineHelpText>
        <label>Rent Adjustment Quote</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>trailer_mobile_fee_quote__c</fullName>
        <formula>CASE ( Adjustment_Lookup__r.Trailer_Mobile_Home__c, &apos;Delivery Fee&apos;, &apos;Delivery Fee&apos; , &apos;Dozer Fee&apos; , &apos;Dozer Fee&apos; , &apos;Electric Hookup Fee&apos; , &apos;Electric Hookup Fee&apos; , &apos;Set-Up Fee&apos; , &apos;Set-Up Fee&apos; , &apos;Site Inspection Fee&apos; , &apos;Site Inspection Fee&apos; , &apos;Skirting Fee&apos; , &apos;Skirting Fee&apos;, &apos;Utility Pole Fee&apos; , &apos;Utility Pole Fee&apos; , &apos;Winterization Fee&apos; , &apos;Winterization Fee&apos; , &apos;Other Fee&apos;  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trailer Mobile Fee Quote</label>
        <type>Text</type>
    </fields>
    <label>Quote</label>
    <listViews>
        <fullName>Approved_Housing_Quotes</fullName>
        <columns>NAME</columns>
        <columns>PTID__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Quote__c.Housing</value>
        </filters>
        <filters>
            <field>Quote_Approved__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>greaterOrEqual</operation>
            <value>3/16/2010 12:00 AM</value>
        </filters>
        <label>Approved Housing Quotes</label>
    </listViews>
    <listViews>
        <fullName>My_Quotes</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Hotel_Room_Lookup__c</columns>
        <columns>Placement_Lookup__c</columns>
        <columns>Quote_Approved__c</columns>
        <columns>Adjustment_Lookup__c</columns>
        <columns>Extension_Lookup__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>My Quotes</label>
    </listViews>
    <nameField>
        <displayFormat>Q-{000000}</displayFormat>
        <label>Quote</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quotes</pluralLabel>
    <recordTypes>
        <fullName>Adjustment_Approved</fullName>
        <active>true</active>
        <description>Adjustment Quote Read Only</description>
        <label>Adjustment - Approved</label>
    </recordTypes>
    <recordTypes>
        <fullName>Adjustment_Quote</fullName>
        <active>true</active>
        <label>Adjustment Quote</label>
    </recordTypes>
    <recordTypes>
        <fullName>Extension_Approved</fullName>
        <active>true</active>
        <description>Extension Quote Read Only</description>
        <label>Extension - Approved</label>
    </recordTypes>
    <recordTypes>
        <fullName>Extension_Quote</fullName>
        <active>true</active>
        <label>Extension Quote</label>
    </recordTypes>
    <recordTypes>
        <fullName>Hotel</fullName>
        <active>true</active>
        <description>Create Hotel Quote</description>
        <label>Hotel</label>
    </recordTypes>
    <recordTypes>
        <fullName>Hotel_Approved</fullName>
        <active>true</active>
        <description>Hotel Quote Read Only</description>
        <label>Hotel - Approved</label>
    </recordTypes>
    <recordTypes>
        <fullName>Housing</fullName>
        <active>true</active>
        <description>Create Housing Request Quote</description>
        <label>Housing</label>
    </recordTypes>
    <recordTypes>
        <fullName>Housing_Approved</fullName>
        <active>true</active>
        <description>Housing Quote Read Only</description>
        <label>Housing - Approved</label>
    </recordTypes>
    <recordTypes>
        <fullName>Housing_Complete</fullName>
        <active>true</active>
        <description>Housing Quote ready for approval</description>
        <label>Housing - Complete</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mulligan_Quote</fullName>
        <active>true</active>
        <label>Mulligan Quote</label>
    </recordTypes>
    <recordTypes>
        <fullName>Trailer_Mobile_Home</fullName>
        <active>true</active>
        <description>For Trailer-Mobile Home requests</description>
        <label>Trailer-Mobile Home</label>
    </recordTypes>
    <recordTypes>
        <fullName>Trailer_Mobile_Home_Approved</fullName>
        <active>true</active>
        <description>Trailer Mobile Home Quote Read Only</description>
        <label>Trailer-Mobile Home - Approved</label>
    </recordTypes>
    <recordTypes>
        <fullName>Trailer_Mobile_Home_Complete</fullName>
        <active>true</active>
        <description>Trailer Mobile Home Quote ready for approval</description>
        <label>Trailer-Mobile Home - Complete</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Increase_CRS_add_on_must_be_positive</fullName>
        <active>true</active>
        <description>The amount in the increase_crs_add_on__c must be positive.</description>
        <errorConditionFormula>Increase_CRS_Add_On__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Increase_CRS_Add_On__c</errorDisplayField>
        <errorMessage>The amount must be positive.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Editing_Approved_Quote</fullName>
        <active>true</active>
        <description>Housing and Trailer-Mobile Home approved quotes can only be edited by system administrators</description>
        <errorConditionFormula>AND( OR($RecordType.Name = &apos;Housing&apos;,$RecordType.Name = &apos;Trailer-Mobile Home&apos;),$Profile.Name != &apos;System Administrator&apos;,PRIORVALUE(Quote_Approved__c) =True)</errorConditionFormula>
        <errorMessage>You do not have permission to edit this Quote.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NonContract_Markup_Positive</fullName>
        <active>true</active>
        <description>Check to make sure the non-contract makrup amount is positive.</description>
        <errorConditionFormula>Non_Contract_Markup_Increase__c   &lt;  0</errorConditionFormula>
        <errorDisplayField>Non_Contract_Markup_Increase__c</errorDisplayField>
        <errorMessage>The non-contract markup amount must be a positive number.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Opportunity_Adjuster_Required</fullName>
        <active>false</active>
        <description>Ensures that an Adjuster has been selected on the Claim before the Quote can be saved</description>
        <errorConditionFormula>AND(OR(RecordTypeId = &apos;012700000001W2s&apos;,RecordTypeId = &apos;012700000001W2u&apos;,RecordTypeId = &apos;012700000001W2q&apos;),LEN(  Service_Request__r.Opportunity__r.Adjuster__c  )=0)</errorConditionFormula>
        <errorMessage>This quote cannot be saved because the Claim does not have an adjuster selected. Please select an adjuster on the Claim.</errorMessage>
    </validationRules>
</CustomObject>